<resources>
    <string name="app_name">Integrador</string>
    <!--Generic-->
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="brand_name">Vacas Locas</string>
    <string name="email">Email</string>
    <string name="kilogram">Kg</string>
    <string name="recognize_with_camera">Reconocer con camara</string>

    <!--Login & Register-->
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_email">Email</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="register_button">Registrarse</string>
    <string name="back_button">Volver</string>
    <string name="password_error">Mínimo 8 caracteres</string>
    <string name="register_error">Error, intente de nuevo</string>
    <string name="new_user_question">¿Nuevo?</string>

    <!--Cattle Card-->
    <string name="cattle_caravan">A34B8-09</string>
    <string name="cattle_weight">680Kg</string>
    
    <!--Bovine Data-->
    <string name="bovine_x">Bovino %1$s</string>
    <string name="generic_title_1">General</string>
    <string name="generic_field_1">* Peso: 832Kg</string>
    <string name="generic_field_2">* Orígen: Nacimiento Local</string>
    <string name="generic_title_2">Vacunas</string>
    <string name="generic_field_3">* Viruela: 10/12/2020</string>
    <string name="generic_field_4">* Triquinosis: 09/09/2009</string>

    <!--User-->
    <string name="user_name">El Usuario</string>
    <string name="user_email">un@email.random</string>

    <!--Cattle-->
    <!--Cattle List-->
    <string name="cattle_list_title">Ganado</string>
    
    <!--Settings-->
    <string name="settings_title">Preferencias</string>
    <!--Order by-->
    <string name="order_by_settings_key">settings_order_by</string>
    <string name="order_by_settings_title">Ordenar ganado por</string>
    <string name="order_by_sex">Sexo</string>
    <string name="order_by_weight_asc">Peso ascendente</string>
    <string name="order_by_weight_des">Peso descendente</string>
    <!--Filter-->
    <string name="female">Hembra</string>
    <string name="male">Macho</string>
    <string name="sex_filter_switch_key">switch_sex_filter</string>
    <string name="sex_filter_list_key">settings_filter_by_sex</string>
    <string name="weight_filter_switch_key">switch_weight_filter</string>
    <string name="weight_filter_value_key">weight_filter_seek_bar</string>
    <string name="settings_filter_title">Filtros</string>
    <string name="filter_title">Filtrar ganado</string>
    <string name="filter_sum">Filtrar ganado por sexo y peso</string>
    <string name="filter_by_sex_title">Filtrar por sexo</string>
    <string name="filter_by_male">@string/male</string>
    <string name="filter_by_female">@string/female</string>
    <string name="filter_by_weight_title">Filtrar por peso</string>

    <!--User account-->
    <string name="user_account_title">Cuenta</string>
    <!--User account passwod-->
    <string name="user_account_passwd_title">Contraseña</string>
    <string name="old_password">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="validate_password">Confirmar contraseña</string>
    <string name="wrong_login">Email o contraseña incorrectos</string>
    <string name="error_change_passwd">Contraseñas no coinciden o vieja contraseña incorrecta</string>
    <!--Navigation Menu-->
    <!--TODO:Change this with more generic section_title, and review if name changes are necessary-->
    <string name="nav_preferences">Preferencias</string>
    <string name="nav_account">Cuenta</string>
    <string name="nav_help">Ayuda</string>
    <string name="nav_signout">Cerrar sesión</string>

    <!--Top App Bar Menu-->
    <string name="search_hint">Buscar caravana</string>
    <string name="menu_refresh">Actualizar</string>

    <!--Help section-->
    <string name="help_title">Ayuda</string>
    <string name="contact_us">Contactenos</string>
    <!--Contact us options-->
    <string name="email_sendto">mailto:el@creador.app</string>
    <string name="send_email_intent_text">Enviar con</string>
    
    <!--Notification-->
    <string name="notification_msg">¡Ven! Tenemos muuucho para mostrarte</string>
    <string name="channel_daily">Recordatorios diarios</string>
    <string name="channel_daily_description">Se realizan recordatorios una vez al dia para usar la app</string>

    <!--Errors and Warnings-->
    <string name="no_internet_title">Sin conexión</string>
    <string name="no_internet_msg">Revisa tu conexión a Internet, los datos mostrados no se pueden actualizar</string>
    <string name="no_internet_positive_btn">Aceptar</string>
    <string name="no_camera_permission">Función no disponible porque los permisos para acceder a la cámara fueron denegados.</string>
    
    <!--Cattle Tabs-->
    <string name="cattle_all">TODO</string>
    <string name="cattle_monitoring">SEGUIMIENTO</string>

    <!--Contextual Action Mode-->
    <string name="options_monitor">Seguir</string>
    <string name="options_dont_monitor">No seguir</string>

    <!--Face Recognition-->
    <string name="camera_view_title">Identificación Caravana</string>
    <string name="searching_bovine">Buscando bovino...</string>
    <string name="found_caravan">Caravana: %1$s</string>
    <string name="go_to_bovine">Ver</string>
</resources>