<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/nav_menu_preferences"
            android:title="@string/nav_preferences"
            android:icon="@drawable/ic_baseline_settings_24"
            app:showAsAction="always"/>
        <item
            android:id="@+id/nav_menu_account"
            android:title="@string/nav_account"
            android:icon="@drawable/ic_baseline_account_box_24"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_menu_help"
            android:title="@string/nav_help"
            android:icon="@drawable/ic_baseline_help_24"
            app:showAsAction="always"/>
    </group>
    <group>
        <item
            android:id="@+id/nav_menu_signout"
            android:title="@string/nav_signout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            app:showAsAction="never"/>
    </group>
</menu>