<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:cardPreventCornerOverlap="true"
    android:layout_margin="@dimen/cattle_card_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bovine_data_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generic_title_1"
            android:textAppearance="?attr/textAppearanceHeadline4"/>

        <TextView
            android:id="@+id/bovine_data_field_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generic_field_1"
            android:textAppearance="?attr/textAppearanceHeadline5"/>

        <TextView
            android:id="@+id/bovine_data_field_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generic_field_2"
            android:textAppearance="?attr/textAppearanceHeadline5"/>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>