<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:cardPreventCornerOverlap="true"
    android:layout_margin="@dimen/cattle_card_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cattle_card_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:scaleType="fitStart"
            android:src="@drawable/sample_cow_1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/cattle_card_padding"
            android:layout_gravity="end"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/cattle_caravan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/cattle_card_text_margin"
                android:text="@string/cattle_caravan"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:layout_gravity="top"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cattle_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cattle_weight"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:layout_gravity="bottom"/>

                <TextView
                    android:id="@+id/cattle_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:layout_marginHorizontal="@dimen/cattle_card_text_margin"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>